--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,4 +28,13 @@
     margin-left: auto;
     font-size: 36px;
   }
+
+  button {
+    margin-left: auto;
+  }
+
+  .test-warning {
+    color: red;
+    margin: 30px 0;
+  }
 }
